# Quantum_tasks

Mountains_NER/: .gitignore  Dockerfile  Makefile  README.md  config.py  data_generation.ipynb  data_utils.py  dataset.py  demo.ipynb  model.py  pyproject.toml  requirements.txt  script.sh  train.py
Mountains_NER/data_generation/: data_generation.ipynb  data_templates.py  generate.py  generation_utils.py  prompts.py
Mountains_NER/eda/: EDA.ipynb  kaggle_dataset_eda.ipynb  main_eda.ipynb  synthetic_dataset_eda.ipynb
Mountains_NER/notes/: expenses.txt
Mountains_NER/src/: app.py  data_utils.py  evaluation.py  inference.py  logging_utils.py  main.py  requirements.txt  train.py
Sentinel_image_matching/: .gitignore  README.md  algorithm.py  data_utils.py  dataset.py  demo.ipynb  inference.py  model.py  pyproject.toml  requirements.txt  train.py
