[project]
name = "mountains-ner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"

# INFERENCE ONLY
dependencies = [
    "fastapi[standard]>=0.139.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[dependency-groups]

# TRAINING ONLY
train = [
    "evaluate>=0.4.6",
    "huggingface>=0.0.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "seqeval>=1.2.2",
    "tqdm>=4.68.4",
]

# DEV ONLY
dev = [
    "ipykernel>=7.3.0",
    "mlflow>=1.27.0",
    "openai>=2.45.0",
    "s3fs>=2026.4.0",
    "sagemaker>=2.0.0,<3.0.0",
]
