[project]
name = "sentinel-image-matching"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.6.17",
    "geopandas>=1.1.4",
    "ipykernel>=7.3.0",
    "kornia>=0.8.3",
    "kornia-moons>=0.2.9",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "opencv-python>=5.0.0.93",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]
